--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"exports": "./index.js",
 	"scripts": {
 		"build": "rimraf ./build && tsc",
-		"start": "npm run build && cross-env NODE_ENV=production node build/index.js",
+		"start": "cross-env NODE_ENV=production node build/index.js",
 		"start:dev": "cross-env NODE_ENV=development npx nodemon",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
