--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
 		/* Language and Environment */
 		"target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
 		"lib": [
-			"es6"
+			"es6",
+			"DOM",
+			"DOM.Iterable"
 		] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
 
 		/* Modules */
