--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ TWITCH_EVENTSUB_PATH_PREFIX=""
 TWITCH_EVENTSUB_PORT="3000"
 TWITCH_BANNER_URL=""
 TWITTER_USERNAME=""
+TWITTER_SCRAPE_MODE="true"
 TWITTER_TOKEN=""
 TWITTER_INCLUDE_RETWEETS="false"
 TWITTER_INCLUDE_REPLIES="false"
