🚧 A twitch chat bot?!

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ TWITCH_EVENTSUB_HOSTNAME=""
 TWITCH_EVENTSUB_PATH_PREFIX=""
 TWITCH_EVENTSUB_PORT="3000"
 TWITCH_BANNER_URL=""
+TWITCH_REDIRECT_URI="http://localhost"
 TWITTER_USERNAME=""
 TWITTER_TOKEN=""
 TWITTER_INCLUDE_RETWEETS="false"
