--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@twurple/eventsub-ngrok": "^6.0.5",
 		"discord.js": "^14.7.1",
 		"dotenv": "^16.0.3",
+		"ejs": "^3.1.8",
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
 		"express-session": "^1.17.3",
@@ -34,6 +35,7 @@
 		"twitter-api-v2": "^1.14.0"
 	},
 	"devDependencies": {
+		"@types/ejs": "^3.1.2",
 		"@types/express": "^4.17.17",
 		"@types/express-session": "^1.17.6",
 		"@types/luxon": "^3.2.0",
