--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"discord.js": "^14.7.1",
 		"dotenv": "^16.0.3",
 		"ejs": "^3.1.8",
+		"emittery": "^1.0.1",
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
 		"express-session": "^1.17.3",
