--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,5 @@ DISCORD_SERVER_ID=""
 DISCORD_TWITCH_CHANNEL_ID=""
 DISCORD_TWITTER_CHANNEL_ID=""
 NICKNAME=""
-EXPRESS_HOSTNAME="https://spicebot.example.com"
+EXPRESS_HOSTNAME="spicebot.example.com"
 EXPRESS_PORT="3000"
