--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
 		"express-session": "^1.17.3",
+		"highlight.js": "^11.7.0",
 		"lowdb": "^5.0.5",
 		"luxon": "^3.2.1",
 		"randomstring": "^1.2.3",
