--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"highlight.js": "^11.7.0",
 		"lowdb": "^5.0.5",
 		"luxon": "^3.2.1",
+		"multer": "^1.4.5-lts.1",
 		"randomstring": "^1.2.3",
 		"twitter-api-v2": "^1.14.0",
 		"ws": "^8.13.0"
@@ -42,6 +43,7 @@
 		"@types/express": "^4.17.17",
 		"@types/express-session": "^1.17.6",
 		"@types/luxon": "^3.2.0",
+		"@types/multer": "^1.4.7",
 		"@types/node": "^18.11.18",
 		"@types/randomstring": "^1.1.8",
 		"@types/ws": "^8.5.4",
