--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"ws": "^8.13.0"
 	},
 	"devDependencies": {
+		"@swc/core": "^1.3.57",
 		"@types/ejs": "^3.1.2",
 		"@types/express": "^4.17.17",
 		"@types/express-session": "^1.17.6",
