--- a/package.json
+++ b/package.json
@@ -57,6 +57,11 @@
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
 	},
+	"overrides": {
+		"@twurple/chat": {
+			"@d-fischer/rate-limiter": "^0.7.4"
+		}
+	},
 	"engines": {
 		"node": ">=16.9.0"
 	},
