--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build": "rimraf ./build && tsc",
 		"start": "cross-env NODE_ENV=production node build/index.js",
-		"start:dev": "cross-env NODE_ENV=development npx nodemon",
+		"start:dev": "cross-env NODE_ENV=development npx tsx watch ./src/index.ts",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [
@@ -18,14 +18,14 @@
 	"author": "Devin Spikowski",
 	"license": "MIT",
 	"dependencies": {
-		"@twurple/api": "^7.0.1",
-		"@twurple/auth": "^7.0.1",
-		"@twurple/chat": "^7.0.1",
-		"@twurple/common": "^7.0.1",
-		"@twurple/eventsub-http": "^7.0.1",
-		"@twurple/eventsub-ngrok": "^7.0.1",
-		"@twurple/pubsub": "^7.0.1",
-		"discord.js": "^14.13.0",
+		"@twurple/api": "^7.0.7",
+		"@twurple/auth": "^7.0.7",
+		"@twurple/chat": "^7.0.7",
+		"@twurple/common": "^7.0.7",
+		"@twurple/eventsub-http": "^7.0.7",
+		"@twurple/eventsub-ngrok": "^7.0.7",
+		"@twurple/pubsub": "^7.0.7",
+		"discord.js": "^14.14.1",
 		"dotenv": "^16.3.1",
 		"ejs": "^3.1.9",
 		"emittery": "^1.0.1",
@@ -33,30 +33,28 @@
 		"express-async-errors": "^3.1.1",
 		"express-session": "^1.17.3",
 		"grace-train-lib": "file:../grace-train-lib",
-		"highlight.js": "^11.8.0",
-		"lowdb": "^6.0.1",
-		"luxon": "^3.4.2",
+		"highlight.js": "^11.9.0",
+		"lowdb": "^7.0.1",
+		"luxon": "^3.4.4",
 		"multer": "^1.4.5-lts.1",
 		"randomstring": "^1.3.0",
-		"twitter-api-v2": "^1.15.1",
-		"ws": "^8.13.0"
+		"twitter-api-v2": "^1.15.2",
+		"ws": "^8.16.0"
 	},
 	"devDependencies": {
-		"@swc/core": "^1.3.82",
-		"@types/ejs": "^3.1.2",
-		"@types/express": "^4.17.17",
-		"@types/express-session": "^1.17.7",
-		"@types/luxon": "^3.3.2",
-		"@types/multer": "^1.4.7",
-		"@types/node": "^20.5.9",
-		"@types/randomstring": "^1.1.8",
-		"@types/ws": "^8.5.5",
+		"@types/ejs": "^3.1.5",
+		"@types/express": "^4.17.21",
+		"@types/express-session": "^1.17.10",
+		"@types/luxon": "^3.4.0",
+		"@types/multer": "^1.4.11",
+		"@types/node": "^20.11.0",
+		"@types/randomstring": "^1.1.11",
+		"@types/ws": "^8.5.10",
 		"cross-env": "^7.0.3",
-		"nodemon": "^3.0.1",
-		"prettier": "^3.0.3",
-		"rimraf": "^5.0.1",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.2.2"
+		"prettier": "^3.1.1",
+		"rimraf": "^5.0.5",
+		"tsx": "^4.7.0",
+		"typescript": "^5.3.3"
 	},
 	"overrides": {
 		"@twurple/chat": {
