--- a/package.json
+++ b/package.json
@@ -69,5 +69,8 @@
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/vegeta897/spice-bot.git"
+	},
+	"prisma": {
+		"schema": "../grace-train-lib/prisma/schema.prisma"
 	}
 }
