--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build": "rimraf ./build && tsc",
 		"start": "cross-env NODE_ENV=production node build/index.js",
-		"start:dev": "cross-env NODE_ENV=development npx nodemon",
+		"start:dev": "cross-env NODE_ENV=development npx tsx watch ./src/index.ts",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [
@@ -18,13 +18,12 @@
 	"author": "Devin Spikowski",
 	"license": "MIT",
 	"dependencies": {
-		"@twurple/api": "^7.0.1",
-		"@twurple/auth": "^7.0.1",
-		"@twurple/chat": "^7.0.1",
-		"@twurple/common": "^7.0.1",
-		"@twurple/eventsub-http": "^7.0.1",
-		"@twurple/eventsub-ngrok": "^7.0.1",
-		"@twurple/pubsub": "^7.0.1",
+		"@twurple/api": "^7.2.1",
+		"@twurple/auth": "^7.2.1",
+		"@twurple/chat": "^7.2.1",
+		"@twurple/common": "^7.2.1",
+		"@twurple/eventsub-http": "^7.2.1",
+		"@twurple/eventsub-ngrok": "^7.2.1",
 		"discord.js": "^14.13.0",
 		"dotenv": "^16.3.1",
 		"ejs": "^3.1.9",
@@ -56,12 +55,6 @@
 		"rimraf": "^5.0.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.2.2"
-	},
-	"overrides": {
-		"@twurple/chat": {
-			"@d-fischer/rate-limiter": "^0.7.4"
-		},
-		"semver": "7.5.2"
 	},
 	"engines": {
 		"node": ">=18.0.0"
